# recall-ipy

./: README.md  Untitled.ipynb  pyproject.toml
recall_ipy/: __init__.py  deck.py  jinja.py  review.py  util.py
recall_ipy/templates/: ReviewDeck.html  ShowDecks.html  jupyter.js.html  shared.js.html
